Remove references to deprecated configuration options
* Updated deprecated quarkus.log.file.enable to quarkus.log.file.enabled
* Updated deprecated quarkus.hibernate-orm.database.generation to quarkus.hibernate-orm.schema-management.strategy

--- a/aws2-s3/src/main/resources/application.properties
+++ b/aws2-s3/src/main/resources/application.properties
@@ -15,7 +15,7 @@
 ## limitations under the License.
 ## ---------------------------------------------------------------------------
 
-quarkus.log.file.enable = true
+quarkus.log.file.enabled = true
 
 #customizable authentication (see README.adoc for more details)
 camel.component.aws2-s3.accessKey=${AWS_ACCESS_KEY}
