--- a/cluster-leader-election/src/main/resources/application.properties
+++ b/cluster-leader-election/src/main/resources/application.properties
@@ -18,7 +18,7 @@
 # Quarkus
 #
 quarkus.banner.enabled = false
-quarkus.log.file.enable = true
+quarkus.log.file.enabled = true
 
 # No need for k8s dev services in this project
 quarkus.kubernetes-client.devservices.enabled = false
