--- a/kamelet-chucknorris/src/main/resources/application.properties
+++ b/kamelet-chucknorris/src/main/resources/application.properties
@@ -19,7 +19,7 @@
 # Quarkus
 #
 quarkus.banner.enabled = false
-quarkus.log.file.enable = true
+quarkus.log.file.enabled = true
 
 # Camel
 quarkus.camel.kamelet.identifiers = chuck-norris-source
