--- a/spring-redis/src/main/resources/application.properties
+++ b/spring-redis/src/main/resources/application.properties
@@ -15,7 +15,7 @@
 ## limitations under the License.
 ## ---------------------------------------------------------------------------
 
-quarkus.log.file.enable = true
+quarkus.log.file.enabled = true
 
 camel.quarkus.spring-redis.port=6379
 camel.quarkus.spring-redis.host=localhost
