--- a/amqp/src/main/resources/application.properties
+++ b/amqp/src/main/resources/application.properties
@@ -16,7 +16,7 @@
 ## ---------------------------------------------------------------------------
 
 
-quarkus.log.file.enable = true
+quarkus.log.file.enabled = true
 
 greeting.message=Hello World via AMQP!
 
