--- a/cxf-soap/src/main/resources/application.properties
+++ b/cxf-soap/src/main/resources/application.properties
@@ -18,7 +18,7 @@
 # Quarkus
 #
 quarkus.banner.enabled = false
-quarkus.log.file.enable = true
+quarkus.log.file.enabled = true
 quarkus.log.file.rotation.max-backup-index = 0
 
 #
