--- a/http-log/src/main/resources/application.properties
+++ b/http-log/src/main/resources/application.properties
@@ -18,7 +18,7 @@
 # Quarkus
 #
 quarkus.banner.enabled = false
-quarkus.log.file.enable = true
+quarkus.log.file.enabled = true
 
 #
 # Quarkus - Camel
