--- a/jta-jpa/src/main/resources/application.properties
+++ b/jta-jpa/src/main/resources/application.properties
@@ -18,7 +18,7 @@
 # Quarkus
 #
 quarkus.banner.enabled = false
-quarkus.log.file.enable = true
+quarkus.log.file.enabled = true
 
 # Default Datasource
 quarkus.datasource.db-kind=h2
@@ -33,8 +33,8 @@ quarkus.datasource.jdbc.transactions=xa
 #%prod.quarkus.datasource.jdbc.transactions=xa
 
 # Hibernate ORM
-quarkus.hibernate-orm.database.generation=drop-and-create
-#%prod.quarkus.hibernate-orm.database.generation=none
+quarkus.hibernate-orm.schema-management.strategy=drop-and-create
+#%prod.quarkus.hibernate-orm.schema-management.strategy=none
 
 # Quarkus Narayana JTA
 quarkus.transaction-manager.object-store.directory=target/narayana
