--- a/message-bridge/src/main/resources/application.properties
+++ b/message-bridge/src/main/resources/application.properties
@@ -14,7 +14,7 @@
 ## See the License for the specific language governing permissions and
 ## limitations under the License.
 ## ---------------------------------------------------------------------------
-quarkus.log.file.enable=true
+quarkus.log.file.enabled=true
 
 ibm.mq.host=localhost
 %kubernetes.ibm.mq.host=${MQ_SERVICE_HOST}
