--- a/netty-custom-correlation/src/main/resources/application.properties
+++ b/netty-custom-correlation/src/main/resources/application.properties
@@ -15,4 +15,4 @@
 ## limitations under the License.
 ## ---------------------------------------------------------------------------
 
-quarkus.log.file.enable = true
+quarkus.log.file.enabled = true
