--- a/platform-http-security-keycloak/src/main/resources/application.properties
+++ b/platform-http-security-keycloak/src/main/resources/application.properties
@@ -16,7 +16,7 @@
 ## ---------------------------------------------------------------------------
 # Quarkus
 quarkus.banner.enabled = false
-quarkus.log.file.enable = true
+quarkus.log.file.enabled = true
 
 # Security
 %prod.quarkus.oidc.auth-server-url=http://localhost:8082/realms/quarkus
