--- a/data-extract-langchain4j/pom.xml
+++ b/data-extract-langchain4j/pom.xml
@@ -31,7 +31,7 @@
 
     <properties>
 
-        <quarkus.platform.version>3.27.0</quarkus.platform.version>
+        <quarkus.platform.version>3.29.0.CR1</quarkus.platform.version>
         <camel-quarkus.platform.version>3.29.0-SNAPSHOT</camel-quarkus.platform.version>
 
         <quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
