--- a/aws2-s3/pom.xml
+++ b/aws2-s3/pom.xml
@@ -22,7 +22,7 @@
 
     <artifactId>camel-quarkus-examples-aws2-s3</artifactId>
     <groupId>org.apache.camel.quarkus.examples</groupId>
-    <version>3.29.0-SNAPSHOT</version>
+    <version>3.29.0</version>
 
     <name>Camel Quarkus :: Examples :: aws2-s3</name>
     <description>Camel Quarkus Example :: Upload a file to an AWS S3 bucket</description>
