--- a/netty-custom-correlation/pom.xml
+++ b/netty-custom-correlation/pom.xml
@@ -22,7 +22,7 @@
 
     <artifactId>camel-quarkus-examples-netty-custom-correlation</artifactId>
     <groupId>org.apache.camel.quarkus.examples</groupId>
-    <version>3.29.0-SNAPSHOT</version>
+    <version>3.29.0</version>
 
     <name>Camel Quarkus :: Examples :: Communication with Netty over TCP</name>
     <description>Camel Quarkus Example :: Communication with Netty over TCP</description>
