--- a/data-extract-langchain4j/pom.xml
+++ b/data-extract-langchain4j/pom.xml
@@ -24,7 +24,7 @@
 
     <artifactId>camel-quarkus-examples-data-extract-langchain4j</artifactId>
     <groupId>org.apache.camel.quarkus.examples</groupId>
-    <version>3.29.0</version>
+    <version>3.30.0-SNAPSHOT</version>
 
     <name>Camel Quarkus :: Examples :: Data Extract LangChain4j Repository</name>
     <description>Camel Quarkus Example :: Data Extract LangChain4j Repository</description>
@@ -32,12 +32,12 @@
     <properties>
 
         <quarkus.platform.version>3.29.0</quarkus.platform.version>
-        <camel-quarkus.platform.version>${quarkus.platform.version}</camel-quarkus.platform.version>
+        <camel-quarkus.platform.version>3.30.0-SNAPSHOT</camel-quarkus.platform.version>
 
-        <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
+        <quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
         <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
-        <camel-quarkus.platform.group-id>${quarkus.platform.group-id}</camel-quarkus.platform.group-id>
-        <camel-quarkus.platform.artifact-id>quarkus-camel-bom</camel-quarkus.platform.artifact-id>
+        <camel-quarkus.platform.group-id>org.apache.camel.quarkus</camel-quarkus.platform.group-id>
+        <camel-quarkus.platform.artifact-id>camel-quarkus-bom</camel-quarkus.platform.artifact-id>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
