--- a/openapi-contract-first/pom.xml
+++ b/openapi-contract-first/pom.xml
@@ -158,6 +158,7 @@
                     <groupId>${quarkus.platform.group-id}</groupId>
                     <artifactId>quarkus-maven-plugin</artifactId>
                     <version>${quarkus.platform.version}</version>
+                    <extensions>true</extensions>
                 </plugin>
 
                 <plugin>
