--- a/cluster-leader-election/pom.xml
+++ b/cluster-leader-election/pom.xml
@@ -169,6 +169,7 @@
                     <groupId>${quarkus.platform.group-id}</groupId>
                     <artifactId>quarkus-maven-plugin</artifactId>
                     <version>${quarkus.platform.version}</version>
+                    <extensions>true</extensions>
                 </plugin>
 
                 <plugin>
