--- a/fhir/pom.xml
+++ b/fhir/pom.xml
@@ -186,6 +186,7 @@
                     <groupId>${quarkus.platform.group-id}</groupId>
                     <artifactId>quarkus-maven-plugin</artifactId>
                     <version>${quarkus.platform.version}</version>
+                    <extensions>true</extensions>
                 </plugin>
 
                 <plugin>
