--- a/observability/pom.xml
+++ b/observability/pom.xml
@@ -173,6 +173,7 @@
                     <groupId>${quarkus.platform.group-id}</groupId>
                     <artifactId>quarkus-maven-plugin</artifactId>
                     <version>${quarkus.platform.version}</version>
+                    <extensions>true</extensions>
                 </plugin>
 
                 <plugin>
@@ -326,6 +327,7 @@
                             <groupId>${quarkus.platform.group-id}</groupId>
                             <artifactId>quarkus-maven-plugin</artifactId>
                             <version>${quarkus.platform.version}</version>
+                            <extensions>true</extensions>
                         </plugin>
 
                         <plugin>
