--- a/timer-log/pom.xml
+++ b/timer-log/pom.xml
@@ -161,6 +161,7 @@
                     <groupId>${quarkus.platform.group-id}</groupId>
                     <artifactId>quarkus-maven-plugin</artifactId>
                     <version>${quarkus.platform.version}</version>
+                    <extensions>true</extensions>
                 </plugin>
 
                 <plugin>
