--- a/jms-jpa/pom.xml
+++ b/jms-jpa/pom.xml
@@ -256,16 +256,31 @@
                     </execution>
                 </executions>
             </plugin>
+
             <plugin>
                 <groupId>net.revelc.code</groupId>
                 <artifactId>impsort-maven-plugin</artifactId>
                 <executions>
                     <execution>
                         <id>sort-imports</id>
-                        <phase>process-sources</phase>
                         <goals>
                             <goal>sort</goal>
                         </goals>
+                        <phase>process-sources</phase>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>com.mycila</groupId>
+                <artifactId>license-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>license-format</id>
+                        <goals>
+                            <goal>format</goal>
+                        </goals>
+                        <phase>process-sources</phase>
                     </execution>
                 </executions>
             </plugin>
