Add license-maven-plugin exclusion for quarkus.log

--- a/cxf-soap/pom.xml
+++ b/cxf-soap/pom.xml
@@ -204,6 +204,7 @@
                             <exclude>**/NOTICE</exclude>
                             <exclude>**/README</exclude>
                             <exclude>**/pom.xml.versionsBackup</exclude>
+                            <exclude>**/quarkus.log*</exclude>
                         </excludes>
                         <mapping>
                             <java>SLASHSTAR_STYLE</java>
