data-extract: Upgrade to granite 4

--- a/data-extract-langchain4j/src/main/resources/application.properties
+++ b/data-extract-langchain4j/src/main/resources/application.properties
@@ -20,4 +20,4 @@ quarkus.default-locale=en_US
 # Adjust as per your where your Ollama instance is running
 langchain4j.ollama.base-url=http://localhost:11434
 # The chat model to use
-langchain4j.ollama.chat-model.model-id=granite3.3:2b
+langchain4j.ollama.chat-model.model-id=granite4:3b-h
