Add Swagger UI to openapi-contract-first example project

--- a/openapi-contract-first/src/main/resources/application.properties
+++ b/openapi-contract-first/src/main/resources/application.properties
@@ -17,7 +17,9 @@
 quarkus.native.resources.includes=petstore.json
 quarkus.camel.openapi.codegen.model-package=sample.petstore.model
 quarkus.camel.openapi.codegen.not-null-jackson=true
+
 camel.rest.bindingMode=json
 camel.rest.bindingPackageScan=${quarkus.camel.openapi.codegen.model-package}
+camel.rest.apiContextPath=/api-doc
 
 pet.name=Tony the tiger
