--- a/openapi-contract-first/pom.xml
+++ b/openapi-contract-first/pom.xml
@@ -82,6 +82,10 @@
             <groupId>org.apache.camel.quarkus</groupId>
             <artifactId>camel-quarkus-rest-openapi</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.camel.quarkus</groupId>
+            <artifactId>camel-quarkus-openapi-java</artifactId>
+        </dependency>
 
         <!-- Test -->
         <dependency>
