Pin kafka test container to 0.114.0-kafka-4.1.0

--- a/kafka/src/main/resources/application.properties
+++ b/kafka/src/main/resources/application.properties
@@ -20,6 +20,7 @@ quarkus.kubernetes-client.devservices.enabled = false
 
 # Use Strimzi as it's power architecture compatible
 quarkus.kafka.devservices.provider = strimzi
+quarkus.kafka.devservices.image-name = quay.io/strimzi-test-container/test-container:0.114.0-kafka-4.1.0
 
 # Kafka topic Name
 kafka.topic.name=test
