--- a/fhir/pom.xml
+++ b/fhir/pom.xml
@@ -22,7 +22,7 @@
 
     <artifactId>camel-quarkus-examples-fhir</artifactId>
     <groupId>org.apache.camel.quarkus.examples</groupId>
-    <version>3.31.0-SNAPSHOT</version>
+    <version>3.31.0</version>
 
     <name>Camel Quarkus :: Examples :: FHIR</name>
     <description>Camel Quarkus Example :: FHIR</description>
